<resources>
    <string name="app_name">Community Policing</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="photo">Take a photo</string>
    <string name="Select">Select Category</string>
    <string name="Select1">Select Severity</string>
    <string name="Select2">Add Vehicles involved</string>
    <string name="ListOfvehicles">List Of Vehicles</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_home">Map Home</string>
    <string name="menu_accident">Accidents</string>
    <string name="menu_potholes">Potholes</string>
    <string name="menu_blockedroads">Blocked Roads</string>
    <string name="menu_issueAnalysis">More settings</string>
    <string name="menu_fallen_trees">Fallen Trees</string>
    <string name="menu_others">Others</string>
    <string name="menu_emergencyContact">Emergency Contacts</string>
    <string name="menu_logout">Logout</string>
    <string name="Resolve">Resolve Issue</string>
    <string name="go">Drive to</string>
    <string name="descriptionOfIssue">Description</string>
    <string name="severityOfIssue">Severity</string>
    <string name="categoryOfIssues">Category</string>
    <string name="numbefOFVechicleInvolved">Vehicles involved</string>
    <string name="Reportedby">Reported by</string>
    <string name="playAudio">Play Audio</string>
    <string name="anonymous_sign_in">Anonymous Sign in</string>
    <string name="community_policing_app_lets_make_our_cities_save">Community policing app let us make our cities safe</string>
    <string name="sounds">Sounds</string>
    <string name="emergency_toll_free_numbers">Emergency Toll-Free Numbers</string>
    <string name="police_dail_112">POLICE DAIL 112</string>
    <string name="traffic_accidents">Traffic Accidents 113 </string>
    <string name="fire_department">Fire Department 111</string>
    <string name="tel112">tel:112</string>
    <string name="tell13">tel:113</string>
    <string name="tel111">tel:111</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="reportIt">Report It</string>
    <string name="map">Map</string>
    <string name="emergencyCon">Emergency Contacts</string>
    <string name="submit">Submit</string>
    <string name="RecordingComplete">Recording Completed</string>
    <string name="Recordnotstarted">Recording wasn\'t started</string>
    <string name="RecordingPlay">Recording Playing</string>
    <string name="Audionotrecorded">Audio not recorded</string>

</resources>
