<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:text="@string/emergency_toll_free_numbers"
        android:textColor="@color/colorAccent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/police_dail_112"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/call911"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:background="@drawable/ic_call_black_24dp">

        </Button>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/traffic_accidents"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/calltraf"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:background="@drawable/ic_call_black_24dp">

        </Button>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/fire_department"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/callfire"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:background="@drawable/ic_call_black_24dp">

        </Button>

    </LinearLayout>
</LinearLayout>

