<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:popupTheme="@style/Dialog">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Select" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="46dp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Select1" />

        <Spinner
            android:id="@+id/spinner_severity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="46dp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Select2" />


        <Spinner
            android:id="@+id/spinner_vt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="46dp" />
    </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--<ScrollView-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="200dp">-->
        <TextView
            android:id="@+id/description3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
          />
            <!--</ScrollView>-->
    </LinearLayout>
</LinearLayout>
